Corrigido highlight de arquivos blobs, pois o plugin nao era inicializado

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 			</div>
 		</div>
 		<script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
-		<script src="http://balupton.github.com/jquery-syntaxhighlighter/scripts/jquery.syntaxhighlighter.min.js"></script>
 		<script src="js/github.js"></script>
 		<script src="js/reupi.js"></script>
-		<script src="js/others.js"></script>
+		<script src="http://balupton.github.com/jquery-syntaxhighlighter/scripts/jquery.syntaxhighlighter.min.js"></script>
+		<script src="js/others.js" async></script>
 	</body>
 </body>
