--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 			
 				<footer class="footer">
-					<p class="pull-right"><a href="https://github.com/dobau">by dobau</a></p>
+					<p class="pull-right"><a href="https://github.com/dobau">&copy; dobau</a></p>
 				</footer>
 			
 			</div>
