Como a v2 do github foi desativada, estou agora utilizando v3

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 			</div>
 		</div>
 		<script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
-		<script src="js/github.js"></script>
+		<script src="js/underscore-min.js"></script>
+		<script src="js/gh3.js"></script>
 		<script src="js/reupi.js"></script>
 		<script src="http://balupton.github.com/jquery-syntaxhighlighter/scripts/jquery.syntaxhighlighter.min.js"></script>
 		<script src="js/others.js" async></script>
